# axon-agent-team

./: .gitignore  .gitmodules  README.md  package-lock.json
backend/: .env.example  pyproject.toml
docs/: ARCHITECTURE.md  OIP智能补调业务场景-详细纪要.md  PHASE1_TASKS.md  PROPOSAL_COMPOSER_DESIGN.md  fullfilment API.md  opt.md  scheduled-agent-tasks-design.md  schema.py  yl-worker2-entity-access-layer.md  yl-worker2-ontology-plan.md  伊利奶粉事业部「分仓补货计划」业务解读.md  奶粉分仓补货数据库表字段.xlsx
frontend/: index.html  package-lock.json  package.json
scripts/: dev-ports.sh  setup_nested_deploy_git.sh  start-mockup.sh  start.sh  stop-mockup.sh  stop.sh  sync-vercel-env.sh  vercel-env.sensitive-keys.txt
yl-scm-mockup/: .env.example  README.md  index.html  package-lock.json  package.json  (+1 more)
yl-scm-mockup-api/: .env.example  README.md  pyproject.toml  wsgi.py
yl-scm-mockup-api/app/: __init__.py  config.py
yl-scm-mockup-api/app/db/: mockup.py  yl.py
yl-scm-mockup-api/app/repositories/: branch_replenishment.py  national_inventory.py  product_lookup.py  transfer_allocation.py
yl-scm-mockup-api/app/routes/: fulfillment.py  health.py  meta.py  plan_transfer.py
yl-scm-mockup-api/app/schemas/: branch_replenishment.py  national_inventory.py  transfer.py
yl-scm-mockup-api/app/services/: branch_replenishment.py  national_inventory.py  transfer_allocation.py
yl-scm-mockup-api/app/utils/: parsers.py
yl-scm-mockup-api/config/: fulfillment_map.yaml  region_map.yaml
yl-scm-mockup-api/docs/: OIP智能补调场景mock case脚本.md  architecture-and-api.md
yl-scm-mockup-api/scripts/: start.sh  stop.sh
(+243 files in other folders)
