[project]
name = "yl-scm-mockup-api"
version = "0.1.0"
description = "Independent Flask API for yl-scm-mockup plan & fulfillment tabs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1",
    "flask-cors>=6.0",
    "psycopg[binary]>=3.3",
    "pydantic-settings>=2.14",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
]

[project.scripts]
yl-mockup-api = "wsgi:main"

[tool.uv]
package = false
